# developing-using-copilot

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: AdvancedLaneDetection.hpp  LaneDetectionAlgorithm.hpp  SimpleLaneDetection.hpp
src/: AdvancedLaneDetection.cpp  LaneDetectionAlgorithm.cpp  LaneKeepingAssistant.cpp  SimpleLaneDetection.cpp
tests/: AdvancedLaneDetectionTest.cpp
